cabal-version:       2.2

name:                mystic-tutor
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/mystic-tutor#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          dltruman2012@gmail.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs:  src
  exposed-modules:
    MysticTutor.BotConfig
    MysticTutor.Logger
    MysticTutor.Deck

  build-depends:
    base >=4.7 && <5,
    discord-haskell,
    aeson,
    yaml,
    time,
    text,
    fast-logger,
    ghc-prim,
    containers,
  default-language: Haskell2010

executable mystic-tutor-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:
    MysticTutor.BotConfig
    MysticTutor.Logger
    MysticTutor.Deck
  build-depends:       
    mystic-tutor,
    base >= 4.7 && < 5,
    discord-haskell,
    aeson,
    yaml,
    time,
    text,
    fast-logger,
    ghc-prim,
    containers,
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
